--- a/src/components/ModalQuiz.astro
+++ b/src/components/ModalQuiz.astro
@@ -49,7 +49,7 @@ const {
               style="width: 0%"
             ></div>
           </div>
-          <p class="text-sm mt-2" data-quiz-counter>Question 1 of 5</p>
+          <p class="text-sm mt-2" data-quiz-counter>Question 1 of 10</p>
         </div>
       </div>
 
@@ -297,7 +297,7 @@ const {
       const counter = this.container.querySelector('[data-quiz-counter]');
       
       if (progressBar) {
-        const percentage = ((this.currentQuestionIndex + 1) / this.questions.length) * 100;
+        const percentage = ((this.currentQuestionIndex + 1) / quizQuestions.length) * 100;
         progressBar.style.width = `${percentage}%`;
       }
       
