Update: automated commit

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -11,7 +11,7 @@ interface Props {
 
 const {
 	title,
-	description = "Professional psychedelic journey facilitation services in Oregon and Colorado. Licensed psilocybin therapy with preparation, facilitation, integration, and beyond.",
+	description = "Professional psychedelic journey facilitation services in Oregon and Colorado. Licensed psilocybin facilitators with preparation, facilitation, integration, and beyond.",
 	keywords = "psychedelic therapy, psilocybin therapy, Oregon, Colorado, licensed facilitator, psychedelic integration, journey preparation",
 	ogImage = "/og-image.jpg",
 	canonicalURL = new URL(Astro.url.pathname, Astro.site).href,
@@ -26,7 +26,7 @@ const defaultStructuredData = {
 	"name": "Disendarkenment",
 	"description": description,
 	"url": "https://disendarkenment.com",
-	"telephone": "+1-555-0123",
+	"telephone": "+1-904-561-0301",
 	"email": "info@disendarkenment.com",
 	"address": {
 		"@type": "PostalAddress",
@@ -41,6 +41,10 @@ const defaultStructuredData = {
 		{
 			"@type": "State",
 			"name": "Colorado"
+		},
+		{
+			"@type": "Other",
+			"name": "TBD"
 		}
 	],
 	"hasOfferCatalog": {
